Minor deployment guide updates

--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -27,9 +27,8 @@ tests:
       dcAdminPassword: $[taskcat_genpass_16]
       safeModeAdminPassword: $[taskcat_genpass_16]
       testuserpassword: $[taskcat_genpass_16]
-      SideCarPassword: $[taskcat_genpass_16]
+      SideCarPassword: FakeP@ss
       KeyPair: $[taskcat_getkeypair]
-      SecretKeyName: override
       QSS3BucketName: $[taskcat_autobucket]
       QSS3BucketRegion: $[taskcat_current_region]
     regions:
